--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,12 @@
 @import "tailwindcss";
 
+@theme {
+  --color-harbor-blue: #715AFF;
+  --color-harbor-pink: #ff7e95;
+  --color-harbor-green: #3F6634
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
