--- a/src/shared-components/nav/nav.css
+++ b/src/shared-components/nav/nav.css
@@ -6,6 +6,23 @@
   width: 60%;
 }
 
+@media screen and (max-width: 768px) {
+  .scrolled {
+    background-color: rgba(255, 255, 255, 0.95);
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    width: 95%;
+    transition: border 0.3s ease-out, width 0.3s ease-out,
+      background-color 0.15s ease-out;
+  }
+
+  .not-scrolled {
+    background-color: rgba(255, 255, 255, 0);
+    border: solid 1px rgba(0, 0, 0, 0);
+    width: 95%;
+    transition: width 0.3s ease-out, border 1s ease-out;
+  }
+}
+
 .not-scrolled {
   background-color: rgba(255, 255, 255, 0);
   border: solid 1px rgba(0, 0, 0, 0);
